<resources>
    <string name="app_name">HuaweiQA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_students">Students</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_questions">Questions</string>
    <string name="choice1">First Choice</string>
    <string name="choice2">Second Choice</string>
    <string name="choice3">Third Choice</string>
    <string name="choice4">Fourth Choice</string>
    <string name="question_body">Question body</string>

    <string name="hint_email">Enter email address</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_password_confirm">Confirm password</string>
    <string name="btn_login">Login</string>
    <string name="btn_hms_login">Login with Huawei id</string>
    <string name="btn_signup">Sign Up</string>
    <string name="text_signup">Need Sign Up?</string>
    <string name="text_signin">Login</string>
    <string name="text_forgot_password">Forgot Password?</string>
    btn_hms_login

</resources>