<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_students">

    <fragment
        android:id="@+id/nav_quizzes"
        android:name="com.mali.huaweiqa.ui.quizzes.QuizListFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/quiz_list_main" />

    <fragment
        android:id="@+id/nav_students"
        android:name="com.mali.huaweiqa.ui.Students.StudentFragment"
        android:label="@string/menu_students"
        tools:layout="@layout/student_main" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.mali.huaweiqa.ui.categories.CategoryFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_catefory" />

    <fragment
        android:id="@+id/nav_questions"
        android:name="com.mali.huaweiqa.ui.questions.QuestionsListFragment"
        android:label="@string/menu_questions"
        tools:layout="@layout/fragment_question_view" />

    <fragment
        android:id="@+id/nav_quiz_questions"
        android:name="com.mali.huaweiqa.ui.quizzes.QuizFragment"
        android:label="@string/menu_questions"
        tools:layout="@layout/fragment_question" />
</navigation>