<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/mali_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/signUp_nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:visibility="gone"
        app:headerLayout="@layout/nav_header_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/activity_main_drawer" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        android:scaleType="centerInside"
        android:src="@mipmap/b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:fontFamily="@font/josefin_regular"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:fontFamily="@font/josefin_regular"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingHorizontal="12dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        />

    <TextView
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_background"
        android:elevation="6dp"
        android:fontFamily="@font/opensans_aemibold"
        android:gravity="center"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/hms_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:elevation="6dp"
        android:fontFamily="@font/opensans_aemibold"
        android:gravity="center"
        android:text="@string/btn_hms_login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/opensans_aemibold"
        android:text="@string/text_signup"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hms_login" />

</androidx.constraintlayout.widget.ConstraintLayout>