<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/question_body"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/colorTextPrimary"
        android:id="@+id/questionBodyTV" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/questionBodyTV"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingLeft="5dp"
        android:id="@+id/questionBodyForm"
        android:cursorVisible="true"
        android:layout_gravity="center_vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"/>
        android:background="@drawable/question_body_background"
        />
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/choice1"
        app:layout_constraintTop_toBottomOf="@+id/questionBodyForm"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/colorTextPrimary"
        android:id="@+id/choice1TV" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/choice1TV"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingLeft="5dp"
        android:id="@+id/choice1Form"
        android:background="@drawable/question_body_background"
        android:cursorVisible="true"
        android:layout_gravity="center_vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        />
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/choice2"
        app:layout_constraintTop_toBottomOf="@+id/choice1Form"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/colorTextPrimary"
        android:id="@+id/choice2TV" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/choice2TV"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingLeft="5dp"
        android:id="@+id/choice2Form"
        android:background="@drawable/question_body_background"
        android:cursorVisible="true"
        android:layout_gravity="center_vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        />
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/choice3"
        app:layout_constraintTop_toBottomOf="@+id/choice2Form"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/colorTextPrimary"
        android:id="@+id/choice3TV" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/choice3TV"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingLeft="5dp"
        android:id="@+id/choice3Form"
        android:background="@drawable/question_body_background"
        android:cursorVisible="true"
        android:layout_gravity="center_vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        />
    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/choice4"
        app:layout_constraintTop_toBottomOf="@+id/choice3Form"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/colorTextPrimary"
        android:id="@+id/choice4TV" />
    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/choice4TV"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingLeft="5dp"
        android:id="@+id/choice4Form"
        android:background="@drawable/question_body_background"
        android:cursorVisible="true"
        android:layout_gravity="center_vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        />
    <Spinner
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_outline"
        android:id="@+id/correctChoice"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintTop_toBottomOf="@id/choice4Form"
        android:cursorVisible="true"
        android:layout_gravity="center_vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:listitem="@layout/singe_choice" />
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/questionFormConfirmation"
        app:layout_constraintTop_toBottomOf="@id/correctChoice"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Confirm"/>


</androidx.constraintlayout.widget.ConstraintLayout>